# final

./: README.md  report.md
sw/basic-fft_2/: Makefile
sw/basic-mul/: Makefile  main  main.cpp
sw/basic-mul_2core/: main_mul.c
sw/basic-mul_2core_1pe/: Makefile  main  main_mul.c
sw/basic-mul_2core_4pe/: Makefile  main  main_mul.c  out.txt
sw/basic-mul_2core_pe/: Makefile  main  main.cpp
sw/basic-mul_2pe/: main  main.cpp
sw/basic-mul_4PE/: Makefile  main  main.cpp
vp/src/platform/: CMakeLists.txt
vp/src/platform/mul_1pe/: CMakeLists.txt  main.cpp  matrix.h
vp/src/platform/mul_2core _p/: main.cpp
vp/src/platform/mul_2core_1pe/: CMakeLists.txt  main.cpp
vp/src/platform/mul_2core_2pe/: CMakeLists.txt  main.cpp  mul.h
vp/src/platform/mul_2core_p/: CMakeLists.txt  main.cpp
vp/src/platform/mul_2pe/: CMakeLists.txt  main.cpp
vp/src/platform/mul_4pe/: CMakeLists.txt  main.cpp  mul.h
